@@ -71,6 +71,9 @@ Release 2.5.0 - UNRELEASED
     YARN-1940. deleteAsUser() terminates early without deleting more files on
     error (Rushabh S Shah via jlowe)
 
+    YARN-1865. ShellScriptBuilder does not check for some error conditions.
+    (Remus Rusanu via ivanmi)
+
 Release 2.4.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
